[package]
name = "learn_rust_by_building_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "activity"
path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.19"
thiserror = "1.0.31"
crossbeam-channel = "0.5.4"
colored = "2.0.0"
